microk8s/infrastructure/installation/kafka-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: kafka-ui
spec:
  selector:
    app: kafka-ui
  ports:
    - port: 9099
      targetPort: 8080
      protocol: TCP
