microk8s/infrastructure/installation/kafka-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui
  namespace: kafka-ui
spec:
  ingressClassName: traefik
  rules:
    - host: kafka-admin.manhlam.name.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 9099
